--- a/style.css
+++ b/style.css
@@ -8,9 +8,8 @@
     height: 100vh;
     width: 100%;
     background: url(assets/background.png);
-    display: grid;
-    grid-template-rows: 150px 275px auto;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    flex-direction: column;
 
 }
 
@@ -24,7 +23,7 @@
     justify-content: center;
     align-items: center;
     gap: 40px;
-    grid-area:1/1/1/3;
+    
     z-index: 1;
 }
 .logo{
@@ -87,13 +86,11 @@ button {
 
 .container{
     width: 100%;
-    height: auto;
-    grid-area: 2/1/4/2;
+    height: 850px;
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: center;
-    padding-top: 50px;
+    justify-content: end;
+    align-items:center;
 }
 .container h1{
     font-size: 72px;
@@ -101,27 +98,71 @@ button {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-.container p{
-    color: white;
-    font-size: 1.5rem;
+
+
+.container img{
+    width: 300px;
+    height: 100px;
+
 }
 
-.gif{
-    grid-area: 1/2/3/3;
-    z-index: 0;
+.container h2{
+    color: rgb(53, 255, 188);
+    font-size: 80px;
+    font-weight: 1000;
+    height: auto;
+    
+
 }
 
-.gif img{
-    height: 425px;
-    width: 780px;
-}
-.gif2{
-    grid-area: 3/2/4/3;
-}
-.gif2 img{
-    width: 100%;
-    height: 270px;
-}
+
+.waves {
+    position:relative;
+    width: 100vw;
+    height:30vh;
+    margin-bottom:-10px; /*Fix for safari gap*/
+    height:150px;
+    padding: 0%;
+    /* max-height:150px; */
+    bottom: 0;
+  }
+  
+  .content {
+    position:relative;
+    height:20vh;
+    text-align:center;
+    background-color: white;
+  }
+  
+  /* Animation */
+  
+  .parallax > use {
+    animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
+  }
+  .parallax > use:nth-child(1) {
+    animation-delay: -2s;
+    animation-duration: 7s;
+  }
+  .parallax > use:nth-child(2) {
+    animation-delay: -3s;
+    animation-duration: 10s;
+  }
+  .parallax > use:nth-child(3) {
+    animation-delay: -4s;
+    animation-duration: 13s;
+  }
+  .parallax > use:nth-child(4) {
+    animation-delay: -5s;
+    animation-duration: 20s;
+  }
+  @keyframes move-forever {
+    0% {
+     transform: translate3d(-90px,0,0);
+    }
+    100% { 
+      transform: translate3d(85px,0,0);
+    }
+  }
 
 /* fskdfgugidfghfig */
 
